--- a/question.html
+++ b/question.html
@@ -39,6 +39,18 @@
             <div class="gif_container">
                 <img src="https://media.tenor.com/2gcR0jU5EMEAAAAi/%E5%AC%89%E3%81%97%E3%81%84-%E3%82%84%E3%81%A3%E3%81%9F%E3%83%BC.gif" alt="嬉しいクーの姿">
             </div>
+            <div class="contact">
+                <a href="https://www.instagram.com/yong.koo?igsh=MTI3bDc2ZTd0emxqcw%3D%3D&utm_source=qr">
+                <button class="refer">
+                    <img src="Pics/instagram.png">
+                </button>
+                </a>
+                <a href="https://line.me/ti/p/EJFuYVYvoE">
+                    <button class="refer">
+                        <img src="Pics/line.png">
+                    </button>
+                    </a>
+            </div>
         </div>
         
         <script src ="scripts/question.js"></script>
